k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ai-gitops-service

spec:
  selector:
    app: ai-gitops-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000

  type: LoadBalancer
